# pre-commit-hooks

./: .pre-commit-hooks.yaml  Readme.md  pyproject.toml
pre_commit_hooks/: detect_env_leakage.py
