[project]
name = "custom_pre_commit_hooks"
version = "0.0.1"
authors = [
  { name="Alexander Neumann", email="alexander.neumann1@hsbi.de" },
]
description = "Custom pre-commit hooks for CareTech OWL"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/caretech-owl/pre-commit-hooks"
Issues = "https://github.com/caretech-owl/pre-commit-hooks/issues"